Fix mixer alignment

--- a/resources/assets/sass/component/mixer.sass
+++ b/resources/assets/sass/component/mixer.sass
@@ -1,9 +1,12 @@
 .mixer
     +e( a-100-fb, a-fb-r, a-fb-jsa, m-c )
-    width: 100vw
     grid-area: b
+    height: 95vh
+    width: 100vw
+    align-content: center
     +desktop
         width: 95vw
+        height: 100vh
 .mixer input
     width: 10px
     height: 200px
